// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgramsQueries getProgram should return nothing if the requested program does not exist 1`] = `undefined`;

exports[`ProgramsQueries getProgram should return the requested program correctly 1`] = `
Program {
  "conference": Conference {
    "id": "81bdc928-b92d-4111-91f9-3ef93e203e88",
    "name": "Conference 1",
  },
  "date": 2020-04-02T00:00:00.000Z,
  "endTime": 2020-04-02T18:00:00.000Z,
  "events": Array [],
  "id": "3185e221-73ca-4b5a-93a9-1cc2d0b5df76",
  "startTime": 2020-04-02T06:00:00.000Z,
  "title": "Conference planning day 1",
}
`;

exports[`ProgramsQueries getPrograms should return a paged list of programs: #0 1`] = `
Object {
  "data": Array [
    Program {
      "conference": Conference {
        "id": "81bdc928-b92d-4111-91f9-3ef93e203e88",
        "name": "Conference 1",
      },
      "date": 2020-04-02T00:00:00.000Z,
      "endTime": 2020-04-02T18:00:00.000Z,
      "events": Array [],
      "id": "3185e221-73ca-4b5a-93a9-1cc2d0b5df76",
      "startTime": 2020-04-02T06:00:00.000Z,
      "title": "Conference planning day 1",
    },
  ],
  "meta": Object {
    "count": 1,
    "skip": 0,
    "totalCount": 1,
  },
}
`;

exports[`ProgramsQueries getPrograms should return a paged list of programs: #1 1`] = `
Object {
  "data": Array [
    Program {
      "conference": Conference {
        "id": "81bdc928-b92d-4111-91f9-3ef93e203e88",
        "name": "Conference 1",
      },
      "date": 2020-04-02T00:00:00.000Z,
      "endTime": 2020-04-02T18:00:00.000Z,
      "events": Array [],
      "id": "3185e221-73ca-4b5a-93a9-1cc2d0b5df76",
      "startTime": 2020-04-02T06:00:00.000Z,
      "title": "Conference planning day 1",
    },
  ],
  "meta": Object {
    "count": 1,
    "skip": 0,
    "totalCount": 1,
  },
}
`;

exports[`ProgramsQueries getPrograms should return a paged list of programs: #2 1`] = `
Object {
  "data": Array [],
  "meta": Object {
    "count": 0,
    "skip": 0,
    "totalCount": 0,
  },
}
`;

exports[`ProgramsQueries getPrograms should return a paged list of programs: #3 1`] = `
Object {
  "data": Array [
    Program {
      "conference": Conference {
        "id": "81bdc928-b92d-4111-91f9-3ef93e203e88",
        "name": "Conference 1",
      },
      "date": 2020-04-02T00:00:00.000Z,
      "endTime": 2020-04-02T18:00:00.000Z,
      "events": Array [],
      "id": "3185e221-73ca-4b5a-93a9-1cc2d0b5df76",
      "startTime": 2020-04-02T06:00:00.000Z,
      "title": "Conference planning day 1",
    },
  ],
  "meta": Object {
    "count": 1,
    "skip": 0,
    "totalCount": 1,
  },
}
`;

exports[`ProgramsQueries getPrograms should return an empty list if no programs are found 1`] = `
Object {
  "data": Array [],
  "meta": Object {
    "count": 0,
    "skip": 0,
    "totalCount": 0,
  },
}
`;

exports[`ProgramsQueries getPrograms should return an empty list if no programs are found 2`] = `
Object {
  "data": Array [],
  "meta": Object {
    "count": 0,
    "skip": 0,
    "totalCount": 0,
  },
}
`;

exports[`ProgramsQueries getPrograms should return an empty list if no programs are found 3`] = `
Object {
  "data": Array [],
  "meta": Object {
    "count": 0,
    "skip": 0,
    "totalCount": 0,
  },
}
`;

exports[`ProgramsQueries getPrograms should return an empty list if no programs are found 4`] = `
Object {
  "data": Array [],
  "meta": Object {
    "count": 0,
    "skip": 0,
    "totalCount": 0,
  },
}
`;
